added get and post to firebase DB, and rendering scores to DOM

--- a/src/index.html
+++ b/src/index.html
@@ -36,20 +36,14 @@
     <div class="hole hole4">
       <div class="hand"></div>
     </div>
-    <!-- <div class="hole hole5">
-      <div class="hand"></div>
-    </div>
-    <div class="bry">
-      <div class=""></div>
-    </div>
-    <div class="hole hole6">
-      <div class="hand"></div>
-    </div> -->
   </div>
   <section>
     <h1>Top Scores</h1>
+    <div id="top_scores"></div>
   </section>
 
+  <script src="data.js"></script>
+  <script src="renderScores.js"></script>
   <script src="main.js"></script>
 </body>
 
