added tshirt image and removed style

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
     <div class="hole hole3">
       <div class="hand"></div>
     </div>
-    <div class="bry tshirt">
-      <div class=""></div>
+    <div id="tshirt" class="bry tshirt">
+      <div></div>
     </div>
     <div class="hole hole4">
       <div class="hand"></div>
