added more tshirts and random generator

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 
   <script src="data.js"></script>
   <script src="renderScores.js"></script>
+  <script src="tshirts.js"></script>
   <script src="main.js"></script>
 </body>
 
