added firebase and touchevents

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./src/style.css">
 </head>
 
 <body>
@@ -42,10 +42,10 @@
     <div id="top_scores"></div>
   </section>
 
-  <script src="data.js"></script>
-  <script src="renderScores.js"></script>
-  <script src="tshirts.js"></script>
-  <script src="main.js"></script>
+  <script src="./src/data.js"></script>
+  <script src="./src/renderScores.js"></script>
+  <script src="./src/tshirts.js"></script>
+  <script src="./src/main.js"></script>
 </body>
 
 </html>
