added about link and temp page

--- a/public/play.html
+++ b/public/play.html
@@ -19,7 +19,11 @@
         <span class="score">0</span>
       </div>
     </div>
-    <div>Play About Top Fives</div>
+    <div>
+      <a href="./play.html">Play</a>
+      <a href="./about.html">About</a>
+      <a href="./scores.html">Top Fives</a>
+    </div>
   </nav>
 
   <!-- GAME AREA -->
