updated style and added about page

--- a/public/play.html
+++ b/public/play.html
@@ -12,17 +12,23 @@
 <body>
   <!-- NAVIGATION AND SCOREBOARD -->
   <nav>
-    <div class="nav_logo"><a href="./index.html"> BRYFIVE!!</a></div>
+    <div class="nav_logo"><a href="./index.html">BRYFIVE!!</a></div>
     <div>
       <div class="score_title">SCORE</div>
       <div class="score_banner">
         <span class="score">0</span>
       </div>
     </div>
-    <div>
-      <a href="./play.html">Play</a>
-      <a href="./about.html">About</a>
-      <a href="./scores.html">Top Fives</a>
+    <div class="nav_links">
+      <div>
+        <a href="./play.html">Play</a>
+      </div>
+      <div>
+        <a href="./about.html">About</a>
+      </div>
+      <div>
+        <a href="./scores.html">Top Fives</a>
+      </div>
     </div>
   </nav>
 
@@ -50,7 +56,7 @@
 
   <!-- START BUTTON -->
   <div class="start_container">
-    <button id="startButton" onClick="startGame()" class="start_button">Play!</button>
+    <button id="startButton" onClick="startGame()" class="start_button">PLAY!</button>
   </div>
 
   <!-- SCRIPTS -->
