added tshirts and non-repeat with session storage

--- a/public/about.html
+++ b/public/about.html
@@ -40,14 +40,13 @@
     </div>
     </br>
     <div class="about_text">
-      <h2>About BRYFIVE</h2>
+      <h2>About BRYFIVE!!</h2>
       <p>Hi! I'm Bryan. I love serving up high-fives. Seriously. It may sound silly, but I can’t help but smile every
         time I connect and hear that sweet, crisp clap.</p>
-      <p>Most times I get a smile back. Once in a while I just get an eye roll... <em>That's right, Keisha, I'm calling
-          you
-          out.</em></p>
+      <p>Most of the time I get a smile back. Once in a while I just get an eye roll... <em>Thanks for humoring me
+          though, Keisha.</em></p>
       <p>Inspired by <a href="https://wesbos.com/" target="blank" rel="noopener noreferrer">Wes Bos</a>, this game is my
-        personal take on his
+        take on his
         <a href="https://www.youtube.com/watch?v=toNFfAaWghU" target="_blank" rel="noopener noreferrer">Whack-a-Mole
           tutorial</a> from the <a href="https://javascript30.com/" target="_blank" rel="noopener noreferrer">
           Javascript 30</a> series.
@@ -58,7 +57,7 @@
       </p>
       <p>Thanks to everyone at <a href="http://nashvillesoftwareschool.com/" target="_blank"
           rel="noopener noreferrer">NSS</a> who raise their hands on a daily basis and
-        accept my high-fives with a smile.
+        accept my high-fives and return a smile.
       </p>
       <p>Special thanks to <a href="https://github.com/Dan-Storm" target="_blank" rel="noopener noreferrer">Dance
           Storm</a> for coining the phrase “BryFive” and creating a kickass emoji for
